<!--
 - Copyright 1999-2011 Alibaba Group.
 -  
 - Licensed under the Apache License, Version 2.0 (the "License");
 - you may not use this file except in compliance with the License.
 - You may obtain a copy of the License at
 -  
 -	  http://www.apache.org/licenses/LICENSE-2.0
 -  
 - Unless required by applicable law or agreed to in writing, software
 - distributed under the License is distributed on an "AS IS" BASIS,
 - WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 - See the License for the specific language governing permissions and
 - limitations under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<distributionManagement>
		<repository>
			<id>nexus-releases</id>
			<name>nexus-releases</name>
			<url>http://10.128.248.61:8080/nexus-2.8.0/content/repositories/releases</url>
		</repository>
		<snapshotRepository>
			<id>nexus-snapshots</id>
			<name>nexus-snapshots</name>
			<url>http://10.128.248.61:8080/nexus-2.8.0/content/repositories/snapshots</url>
		</snapshotRepository>
	</distributionManagement>	
	
	<modelVersion>4.0.0</modelVersion>
    <groupId>org.pbccrc</groupId>
	<artifactId>zsls-parent</artifactId>
	<version>2.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>distributed-dispatche</name>
	<description>The parent project of zeus-schedule</description>
	<modules>
		<module>zsls-common</module>
		<module>zsls-jobtracker</module>
		<module>zsls-tasktracker</module>
		<module>zsls-admin</module>
	</modules>
	<properties>
		<!-- Common libs -->
		<spring_version>3.1.4.RELEASE</spring_version>
		<mina_version>2.0.9</mina_version>
		<curator_version>2.7.1</curator_version>
		<gson_version>2.3.1</gson_version>
		<httpclient_version>3.1</httpclient_version>
		<jdbc_version>5.1.36</jdbc_version>
		<ojdbc_version>12.1.0.1</ojdbc_version>
		<druid_version>1.0.14</druid_version>
		<commons_lang_version>2.6</commons_lang_version>
		<thrift_version>0.9.3</thrift_version>
		<netty_version>4.1.0.Final</netty_version>
		<quartz_version>2.2.1</quartz_version>
		<xstream_version>1.4.3</xstream_version>		
		<!-- Log libs -->
		<slf4j_version>1.6.6</slf4j_version>
		<log4j_version>1.2.16</log4j_version>
		<slf4j-log_version>1.7.12</slf4j-log_version>
		<!-- Test libs -->
		<junit_version>4.10</junit_version>
		<!-- Build args -->
		<!--<argline>-server -Xms64m -Xmx64m -XX:PermSize=64m -XX:MaxPermSize=64m</argline>-->
		<skip_maven_deploy>false</skip_maven_deploy>
		<updateReleaseInfo>true</updateReleaseInfo>
		<project.build.sourceEncoding>${file_encoding}</project.build.sourceEncoding>
        <!-- for maven compiler plugin -->
        <maven_compiler_plugin_version>2.3.2</maven_compiler_plugin_version>
        <maven_surefire_plugin_version>2.12.4</maven_surefire_plugin_version>
        <maven_jar_plugin_version>2.4</maven_jar_plugin_version>
        <maven_dependency_plugin_version>2.4</maven_dependency_plugin_version>
        <maven_antrun_version>1.3</maven_antrun_version>
        <java_source_version>1.6</java_source_version>
        <java_target_version>1.6</java_target_version>
        <file_encoding>UTF-8</file_encoding>
	</properties>
	<dependencyManagement>
		<dependencies>
			<!-- Common libs -->
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-beans</artifactId>
				<version>${spring_version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-context</artifactId>
				<version>${spring_version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-core</artifactId>
				<version>${spring_version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.mina</groupId>
				<artifactId>mina-core</artifactId>
				<version>${mina_version}</version>
			</dependency>
			<!-- Log libs -->
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j_version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-log4j12</artifactId>
				<version>${slf4j-log_version}</version>
			</dependency>
			<dependency>
				<groupId>commons-logging</groupId>
				<artifactId>commons-logging-api</artifactId>
				<version>${jcl_version}</version>
			</dependency>
			<dependency>
				<groupId>log4j</groupId>
				<artifactId>log4j</artifactId>
				<version>${log4j_version}</version>
			</dependency>
			<!-- Test libs -->
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit_version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>  
				<artifactId>maven-compiler-plugin</artifactId>  
				<version>${maven_compiler_plugin_version}</version>
				<configuration>  
					<source>1.6</source>  
					<target>1.6</target>  
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven_surefire_plugin_version}</version>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>${maven_jar_plugin_version}</version>
				<configuration>
					<excludes>
						<exclude>**/*.properties</exclude>
						<exclude>**/*.xml</exclude>
						<exclude>**/*.conf</exclude>
						<exclude>data/*</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</build>
	
	<developers>
		<developer>
			<name>JingyuanSun</name>
			<id>squall</id>
			<email>215522963(AT)qq.com</email>
			<roles>
				<role>Leader</role>
			</roles>
			<timezone>+8</timezone>
		</developer>
		<developer>
			<name>XiaobinLing</name>
			<id>xiaobin.ling</id>
			<email>466092805(AT)qq.com</email>
			<roles>
				<role>Developer</role>
			</roles>
			<timezone>+8</timezone>
		</developer>
	</developers>
</project>
